include/libqgraphicswidget.h

typedef struct QEvent QEvent;
typedef struct QGraphicsWidget QGraphicsWidget;
typedef struct QKeySequence QKeySequence;
void QGraphicsWidget_GrabKeyboardEvent(QGraphicsWidget* self, QEvent* event);
void QGraphicsWidget_UngrabKeyboardEvent(QGraphicsWidget* self, QEvent* event);
libqt_string QGraphicsWidget_Tr2(const char* s, const char* c);
libqt_string QGraphicsWidget_Tr3(const char* s, const char* c, int n);
int QGraphicsWidget_GrabShortcut2(QGraphicsWidget* self, QKeySequence* sequence, int context);
void QGraphicsWidget_SetShortcutEnabled2(QGraphicsWidget* self, int id, bool enabled);
void QGraphicsWidget_SetShortcutAutoRepeat2(QGraphicsWidget* self, int id, bool enabled);
void QGraphicsWidget_SetAttribute2(QGraphicsWidget* self, int attribute, bool on);